<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.optaplanner</groupId>
    <artifactId>optaplanner-build-parent</artifactId>
    <version>8.30.0.Final</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>optapy-parent</artifactId>
  <packaging>pom</packaging>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <version.ch.qos.logback>1.2.10</version.ch.qos.logback>
    <version.compiler.plugin>3.8.1</version.compiler.plugin>
    <version.surefire.plugin>2.22.2</version.surefire.plugin>
    <version.apache.collections4>4.4</version.apache.collections4>

    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
    <sonar.organization>optapy</sonar.organization>
    <sonar.sources>src/main/java,src/main/python</sonar.sources>
    <sonar.tests>src/test/java,tests</sonar.tests>
    <sonar.python.version>3.9,3.10</sonar.python.version>
    <sonar.python.coverage.reportPaths>target/coverage.xml</sonar.python.coverage.reportPaths>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.optaplanner</groupId>
        <artifactId>jpyinterpreter</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${version.apache.collections4}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>jpyinterpreter</module>
    <module>optapy-core</module>
    <module>optapy-docs</module>
  </modules>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <!-- Get releases only from Maven Central which is faster. -->
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
